--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,9 @@
   </head>
   <body>
     <div class="carta">
-      <p id="palo"></p>
-      <p id="number"></p>
-      <p id="palo2"></p>
+      <p class="palo" id="palo"></p>
+      <p class="number" id="number"></p>
+      <p class="palo2" id="palo2"></p>
     </div>
   </body>
 </html>
